--- a/css/style.css
+++ b/css/style.css
@@ -39,10 +39,30 @@ h2 {
 
 .main-navigation {
   width: 1056px;
-  /*margin: 0 auto;*/
   margin-left: 72px;
   background-color: yellow;
   height: 55px;
+}
+
+.main-navigation ul {
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+  font-size: 0;
+}
+
+.main-navigation li {
+  display: inline-block;
+  font-size: 16px;
+  line-height: 20px;
+  vertical-align: top;
+}
+
+.main-navigation a {
+  display: block;
+  padding-top: 18px;
+  padding-bottom: 17px;
 }
 
 .main-navigation-left {
@@ -53,6 +73,8 @@ h2 {
 
 .index-logo {
   position: absolute;
+  left: 50%;
+  margin-left: -69px;
 }
 
 .main-navigation-right {
@@ -73,12 +95,8 @@ h2 {
   margin-bottom: 11px;
 }
 
-.line {
-  position: absolute;
-}
-
-.gorgeous {
-  margin-left: 513px;
+.line  {
+  margin-left: 472px;
   margin-bottom: 55px;
 }
 
@@ -124,22 +142,20 @@ h2 {
 }
 
 .column {
+  float:left;
   width: 400px;
   min-height: 330px;
 }
 
 .info-housing {
-  float:left;
   background-color: chocolate;
 }
 
 .info-food {
-  float: left;
   background-color: yellow;
 }
 
 .info-souvenirs {
-  float: right;
   background-color: fuchsia;
 }
 
@@ -156,37 +172,35 @@ h2 {
 }
 
 .column-2 {
+  float:left;
   width: 400px;
   min-height: 256px;
 }
 
 .attractions-square {
-  float:left;
   background-color: chocolate;
 }
 
 .attractions-road {
-  float: left;
   background-color: yellow;
 }
 
 .attractions-tourists {
-  float: right;
   background-color: fuchsia;
 }
 
 
 .index-booking{
-  min-height: 291px;
+  /*min-height: 291px;*/
   background-color: lime;
+  padding-top: 58px;
 }
 
 .interested {
   width: 300px;
   min-height: 24px;
   margin: 0 auto;
-  margin-top: 50px;
-  margin-bottom: 28px;
+  margin-bottom: 38px;
   background-color: aqua;
 }
 
@@ -206,46 +220,51 @@ h2 {
 
 .geolocation {
   min-height: 593px;
-  background-color: yellow;
+  background-color: purple;
 }
 
 .index-modal {
+  position: absolute;
   width: 568px;
   min-height: 395px;
   margin-left: 316px;
 }
 
 .main-footer {
+  margin-top: -120px;
   min-height: 120px;
-  background-color: lime;
+  background-color: rgba(255, 255, 0, 0.4);
+  font-size: 0;
+}
+
+
+.foot {
+  display: inline-block;
+  width: 400px;
+  line-height: 26px;
+  vertical-align: top;
+
 }
 
 .footer-hashtag {
-  float: left;
-  width: 136px;
-  min-height: 16px;
-  margin-top: 52px;
-  /*margin-bottom: 52px;*/
-  margin-left: 132px;
+  font-size: 21px;
+  padding-top: 47px;
+  padding-bottom: 47px;
   background-color: aqua;
 }
 
 .footer-social {
-  float: left;
-  width: 150px;
-  min-height: 48px;
-  margin-left: 256px;
-  margin-top: 36px;
-  margin-bottom: 36px;
-  background-color: aqua;
+  font-size: 16px;
+  padding-top: 46px;
+  padding-bottom: 47px;
+  background-color: lime;
 }
 
 .footer-copyright {
-  float: right;
-  width: 195px;
-  min-height: 48px;
-  margin-right: 102px;
-  margin-bottom: 36px;
+
+  font-size: 16px;
+  padding-top: 37px;
+  padding-bottom: 36px;
   background-color: aqua;
 }
 
@@ -280,35 +299,36 @@ h2 {
 }
 
 .search-results {
-  min-height: 86px;
+  /*min-height: 86px;*/
   background-color: lime;
 }
 
 .number-items {
   float: left;
   width: 115px;
-  margin-top: 32px;
-  margin-bottom: 32px;
-  background-color: aqua;
+  line-height: 26px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: purple;
 }
 
 .inner-sort {
   float: left;
   width: 78px;
-  min-height: 10px;
+  line-height: 10px;
   margin-left: 48px;
-  margin-top: 38px;
-  margin-bottom: 38px;
+  padding-top: 38px;
+  padding-bottom: 38px;
   background-color: aqua;
 }
 
 .inner-types {
   float: left;
   width: 250px;
-  min-height: 10px;
+  line-height: 10px;
   margin-left: 40px;
-  margin-top: 38px;
-  margin-bottom: 38px;
+  padding-top: 38px;
+  padding-bottom: 38px;
   background-color: aqua;
 }
 
@@ -331,26 +351,26 @@ h2 {
   min-height: 90px;
   margin-top: 30px;
   margin-bottom: 30px;
+  margin-right: 30px;
 }
 
-/*.hotel-info {
+.hotel-info {
   float: left;
   width: 260px;
   min-height: 90px;
   margin-top: 30px;
   margin-bottom: 30px;
-  margin-left: 30px;
   background-color: lime;
-}*/
+}
 
-/*.hotel-rating {
+.hotel-rating {
   float: right;
   width: 120px;
   min-height: 90px;
   margin-top: 30px;
   margin-bottom: 30px;
   background-color: lime;
-}*/
+}
 
 .hotel-1 {
   background-color: yellow;
@@ -363,3 +383,16 @@ h2 {
   background-color: fuchsia;
 }
 
+.inner-foot {
+  display: inline-block;
+  width: 352px;
+  line-height: 26px;
+  vertical-align: top;
+
+}
+
+.inner-footer {
+  min-height: 120px;
+  background-color: rgba(255, 255, 0, 0.4);
+  font-size: 0;
+}
